tests/fail/fail_reserved_function_name_mostra.kl
fn mostra() vaziu {
}

fn inisiu() {
}
